Aggiunto tag Google Ads al sito

--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!doctype html>
 <html lang="it">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Sgomberami Ristrutturazioni — Sgomberi e ristrutturazioni chiavi in mano</title>
-  <meta name="description" content="Sgomberami Ristrutturazioni: sopralluogo gratuito, ristrutturazioni complete, sgomberi con smaltimento autorizzato. Preventivo trasparente e tempi certi.">
-  <meta name="google-site-verification" content="d-yn0gc-PbnddiF8nhUZNel5P2G9A7tBfVEY3mNSlQE" />
-  <meta name="google-site-verification" content="401876af580b46f1" />
-  <link rel="icon" href="/favicon.svg">
-  <link rel="stylesheet" href="assets/style.css">
-  <meta property="og:title" content="Sgomberami Ristrutturazioni">
-  <meta property="og:description" content="Sopralluogo gratuito, ristrutturazioni complete e smaltimento autorizzato.">
-  <meta property="og:image" content="assets/og-home.svg">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17610207002"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'AW-17610207002');
+</script>
 </head>
 <body>
   <header class="site-header container">
