Aggiunto favicon/logo al sito

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   gtag('js', new Date());
   gtag('config', 'AW-17610207002');
 </script>
+<link rel="icon" href="/logo.jpg" type="image/jpeg">
 </head>
 <body>
   <header class="site-header container">
