--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'AW-17610207002');
+  <link rel="icon" href="/logo.jpg" type="image/jpeg">
+<link rel="stylesheet" href="style.css">
+</head>
 </script>
 <link rel="icon" href="/logo.jpg" type="image/jpeg">
 </head>
