--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   gtag('js', new Date());
   gtag('config', 'AW-17610207002');
   <link rel="icon" href="/logo.jpg" type="image/jpeg">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./assets/style.css">
 </head>
 </script>
 <link rel="icon" href="/logo.jpg" type="image/jpeg">
