--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
   gtag('js', new Date());
   gtag('config', 'AW-17610207002');
   <link rel="icon" href="/logo.jpg" type="image/jpeg">
-<link rel="stylesheet" href="./assets/style.css">
+<link rel="stylesheet" href="./style.css">
+</head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17610207002"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-17610207002');
+  </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17610207002"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'AW-17610207002');
+</script>
 </head>
 </script>
 <link rel="icon" href="/logo.jpg" type="image/jpeg">
