Update Google Tag Manager and site verification
Updated Google Tag Manager IDs and added Google site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
 <!doctype html>
 <html lang="it">
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'AW-17610207002');
-  <link rel="icon" href="/logo.jpg" type="image/jpeg">
-<link rel="stylesheet" href="./style.css">
 </head>
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-P26RG76J');</script>
-<!-- End Google Tag Manager --><head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script 
   </script>
-</script>
-</script>
 <link rel="icon" href="/logo.jpg" type="image/jpeg">
-</head>
+</head><!-- Google Tag Manager -->
+<script>
+  (function(w,d,s,l,i){
+    w[l]=w[l]||[];
+    w[l].push({'gtm.start': new Date().getTime(), event:'gtm.js'});
+    var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),
+        dl=l!='dataLayer'?'&l='+l:'';
+    j.async=true;
+    j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+    f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-P26R676J');
+</script>
+<!-- End Google Tag Manager -->
+
+<!-- Google Ads Global site tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17610207002"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'AW-17610207002');
+</script>
+
+<!-- Google site verification -->
+<meta name="google-site-verification" content="kk63tFuF7Qe8GJqcdRzRQ1-m5H2YD-TjQf826utQca8" />
 <body><!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P26RG76J"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->  <header class="site-header container">
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P26R676J"
+          height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+  <header class="site-header container">
     <a href="index.html" class="logo">
       <img src="/logo.jpg" alt="Logo Sgomberami Ristrutturazioni">
       <div class="logo-text">
