Fix script tags and update Google Tag Manager ID

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 </head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script 
   </script>
 <link rel="icon" href="/logo.jpg" type="image/jpeg">
 </head><!-- Google Tag Manager -->
@@ -23,7 +22,6 @@
 
 <!-- Google Ads Global site tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17610207002"></script>
-<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -34,7 +32,7 @@
 <meta name="google-site-verification" content="kk63tFuF7Qe8GJqcdRzRQ1-m5H2YD-TjQf826utQca8" />
 <body><!-- Google Tag Manager (noscript) -->
 <noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P26R676J"
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CT7S252
           height="0" width="0" style="display:none;visibility:hidden"></iframe>
 </noscript>
 <!-- End Google Tag Manager (noscript) -->
