Remove Click-to-call conversion script
Removed Click-to-call event snippet from the HTML.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,6 @@
 <!doctype html>
 <html lang="it">
-</head><!-- Event snippet for Click-to-call (1) conversion page
-In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-<script>
-function gtag_report_conversion(url) {
-  var callback = function () {
-    if (typeof(url) != 'undefined') {
-      window.location = url;
-    }
-  };
-  gtag('event', 'conversion', {
-      'send_to': 'AW-17610207002/C5JDCN2r0bwbEJremc1B',
-      'value': 1.0,
-      'currency': 'EUR',
-      'event_callback': callback
-  });
-  return false;
-}
+</head>
 </script>
 meta name="google-site-verification" content="kk63tFuF7Qe8GJqcdRzRQ1-m5H2YD-TjQf826utQca8" />  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
