Correct head tag and add site verification meta
Fix malformed head tag and add Google site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="it">
-</head>
-</script>
+</head
 meta name="google-site-verification" content="kk63tFuF7Qe8GJqcdRzRQ1-m5H2YD-TjQf826utQca8" />  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </script>
