Fix HTML structure and add missing closing tag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html lang="it">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="logo.jpg" type="image/jpeg">
+<link rel="stylesheet" href="style.css">
 <!-- Google Tag Manager -->
 <script>
 (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -18,7 +23,8 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'AW-17610207002');
 gtag('config', 'G-PW671RW9TJ');
-</script>
+  </script>
+</head>
 <body>
   <!-- Google Tag Manager (noscript) -->
 <noscript>
