Update index.html with meta and title tags
Added Google site verification meta tag and title.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html lang="it">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="logo.jpg" type="image/jpeg">
-<link rel="stylesheet" href="style.css">
-<!-- Google Tag Manager -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="kk63tFuF70e8QJqcdRzRQ1-m5HYZD-TjQf820utQca8">
+  <title>Sgomberami Ristrutturazioni</title>
+
+  <link rel="icon" href="logo.jpg" type="image/jpeg">
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Google Tag Manager -->
 <script>
 (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -25,6 +29,7 @@ gtag('config', 'AW-17610207002');
 gtag('config', 'G-PW671RW9TJ');
   </script>
 </head>
+
 <body>
   <!-- Google Tag Manager (noscript) -->
 <noscript>
@@ -32,6 +37,8 @@ gtag('config', 'G-PW671RW9TJ');
 height="0" width="0" style="display:none;visibility:hidden"></iframe>
 </noscript>
 <!-- End Google Tag Manager (noscript) -->
+
+  <!-- CONTENUTO DEL TUO SITO -->
   <header class="site-header container">
     <a href="index.html" class="logo">
       <img src="/logo.jpg" alt="Logo Sgomberami Ristrutturazioni">
