--- a/index.html
+++ b/index.html
@@ -3,33 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-site-verification" content="kk63tFuF70e8QJqcdRzRQ1-m5HYZD-TjQf820utQca8">
+  <meta name="google-site-verification" content="kk63tFu7Qe08JqcdRzRQ1-m5HYZD-TjQf820utQca8">
   <title>Sgomberami Ristrutturazioni</title>
 
   <link rel="icon" href="logo.jpg" type="image/jpeg">
   <link rel="stylesheet" href="style.css">
 
   <!-- Google Tag Manager -->
-<script>
-(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-5CT7S252');
-</script>
-<!-- End Google Tag Manager -->
-
-<!-- Google Ads e Analytics (tramite gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17610207002"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'AW-17610207002');
-gtag('config', 'G-PW671RW9TJ');
+  <script>
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-5CT7S252');
   </script>
+  <!-- End Google Tag Manager -->
+
+  <!-- Google Ads & Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17610207002"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-17610207002');
+    gtag('config', 'G-PW671RW9TJ');
+  </script>
+  <!-- End Google Ads & Analytics -->
 </head>
 
+<body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CT7S252"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
+  <!-- QUI comincia il tuo contenuto -->
+
+<body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript>
+<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CT7S252"
+height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
 <body>
   <!-- Google Tag Manager (noscript) -->
 <noscript>
