--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
             </div>
             <div>
               <div style="font-weight:bold;margin-bottom:4px;color:#333;">Telefono</div>
-              <a href="tel:+393332837165" style="color:#ff6b35;text-decoration:none;font-size:1.1em;">+39 333 283 7165</a>
+              <a href="tel:+393332837165"class=" call-btn">Chiama ora</a> style="color:#ff6b35;text-decoration:none;font-size:1.1em;">+39 333 283 7165</a>
             </div>
           </div>
           <div style="display:flex;align-items:center;gap:16px;">
