Update contact form to include action attribute
Added action attribute to contact form for redirection.

--- a/ristrutturazioni.html
+++ b/ristrutturazioni.html
@@ -60,7 +60,7 @@
 
     <section class="section" id="contatti">
       <h2>Richiedi preventivo</h2>
-      <form id="contact-form" name="preventivo" method="POST" data-netlify="true">
+      <form id="contact-form" name="preventivo" method="POST" data-netlify="true" action="/thankyou.html">
         <input type="hidden" name="form-name" value="preventivo">
         <div class="form-row">
           <input name="name" type="text" placeholder="Nome e Cognome" required>
