Add method and action attributes to contact form

--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
           <p style="line-height:1.8;"><span style="color:#ff6b35;font-size:1.2em;margin-right:8px;">✓</span><strong>Esperienza e professionalità</strong> – Un team qualificato al tuo servizio</p>
         </div>
       </div>
-      <h2>Richiedi il tuo preventivo gratuito</h2>
-      <form id="contact-form" name="preventivo">
+      <form id="contact-form" name="preventivo" method="POST" data-netlify="true" action="/thankyou.html">
         <div class="form-row">
           <input name="name" type="text" placeholder="Nome e Cognome" required>
           <input name="phone" type="tel" placeholder="Telefono">
