Add conversion tracking snippet to thankyou.html
Added Google Analytics event snippet for conversion tracking.

--- a/thankyou.html
+++ b/thankyou.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Grazie per averci contattato!</title>
 
+  <!-- Event snippet for Visualizzazione di pagina conversion page -->
+<script>
+  gtag('event', 'conversion', {
+    'send_to': 'AW-17610207002/lFlTCkYb_b4bEJremc1B',
+    'value': 1.0,
+    'currency': 'EUR'
+  });
+</script>
+
   <!-- Google tag base -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17610207002"></script>
   <script>
